[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hakkou"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
keywords = []
authors = [
  { name = "Chason Chaffin", email = "chason@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "uvicorn",
  "starlette[full]",
  "Authlib",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/chason/hakkou#readme"
Issues = "https://github.com/chason/hakkou/issues"
Source = "https://github.com/chason/hakkou"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "pytest",
  "pytest-cov",
]

[tool.hatch.version]
path = "src/hakkou/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "hakkou[dev]",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/hakkou --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "src/hakkou/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
